--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.1",
-    "chokidar": "^3.5.2"
+    "chokidar": "^3.5.2",
+    "commander": "^8.2.0"
   }
 }
